qto-200606113211 fix the calendar control must overlap bug

--- a/src/perl/qto/public/themes/thme-blue/css/screen/controls/table.css
+++ b/src/perl/qto/public/themes/thme-blue/css/screen/controls/table.css
@@ -1,3 +1,145 @@
+#div_central_panel {
+   overflow-y:visible;
+}
+#paging {
+	top: 160px;
+	width: auto;
+	min-height: 60px;
+	height: auto;
+	height: 100px;
+   text-align: center;
+}
+#pager02 button{
+   border-style:none;
+   background-color:white;
+}
+#pager02 {
+   display: inline-block;
+   clear: none;
+	font-size: 100% ;
+	width: 50%;
+	min-width: 200px;
+	height: 50px;
+	margin: 0px auto;
+	padding: 5px;
+	position: relative;
+	z-index: 1;
+}
+#div_page_sizer {
+   display: inline-block;
+   clear: none;
+	z-index: 1;
+	font-size: 80% ;
+	width: 50%;
+	height: 30px;
+	margin: 0 auto;
+	padding: 5px;
+	position: relative;
+}
+.cls_img_but {
+   display: inline-block;
+   float: left;
+   padding: 6px;
+   height; 20px;
+	background-color: transparent;
+   border-bottom-left-radius: 45%;
+   border-bottom-right-radius: 45%;
+	box-shadow: 0px 0px 5px 0px #C0C0C0;
+   border-color: white;
+   border-top: none;
+}
+.cls_img_but:hover, .cls_img_but:focus{
+   padding: 7px;
+   background-color: #D3D3D3;
+	border-radius: 0px 1px 0px 0px;
+	box-shadow: 0px 0px 5px 0px #C0C0C0;
+	-webkit-box-shadow: 0px 0px 5px 0px #C0C0C0;
+	-moz-box-shadow: 0px 0px 5px 0px #C0C0C0;
+   border-bottom-left-radius: 45%;
+   border-bottom-right-radius: 45%;
+   border-top: none;
+	display: inline-block;
+   clear: none;
+}
+#page_counter{
+   display: inline-block;
+   float:left;
+   clear: none;
+   margin: 10px;
+   font-size: 90% ;
+   color: #a4a9c4 ;
+}
+.actv {
+   padding: 0px 6px 2px 6px;
+   float: left;
+   width: auto;
+   border: none;
+   display: inline;
+   outline: 0;
+   background-color: #C0C0C0;
+   font-weight: bold ; 
+   border-top-left-radius: 45%;
+   border-top-right-radius: 45%;
+   border-bottom-left-radius: 45%;
+   border-bottom-right-radius: 45%;
+   border: 1px solid #CDCDCD;
+   box-shadow: 2px 2px 10px #C0C0C0;
+   -webkit-box-shadow: 2px 2px 10px #C0C0C0;
+   -moz-box-shadow: 2px 2px 10px #C0C0C0;
+}
+a {
+    color: inherit;
+}
+a {
+    background-color: transparent;
+}
+
+a:hover {
+   color: red ; 
+   background-color: yellow;
+   font-weight: bold ; 
+   border-top-left-radius: 45%;
+   border-top-right-radius: 45%;
+   border-bottom-left-radius: 45%;
+   border-bottom-right-radius: 45%;
+	border: 1px solid #CDCDCD;
+	box-shadow: 2px 2px 10px #C0C0C0;
+	-webkit-box-shadow: 2px 2px 10px #C0C0C0;
+	-moz-box-shadow: 2px 2px 10px #C0C0C0;
+}
+
+a:active {
+	color: red ; 
+	background-color: yellow;
+	font-weight: 800;
+   border-top-left-radius: 45%;
+   border-top-right-radius: 45%;
+   border-bottom-left-radius: 45%;
+   border-bottom-right-radius: 45%;
+	box-shadow: 2px 2px 10px #C0C0C0;
+	-webkit-box-shadow: 2px 2px 10px #C0C0C0;
+	-moz-box-shadow: 2px 2px 10px #C0C0C0;
+}
+
+a:focus{
+   color: red ; 
+   background-color: yellow;
+	font-weight: 800;
+   border-top-left-radius: 45%;
+   border-top-right-radius: 45%;
+   border-bottom-left-radius: 45%;
+   border-bottom-right-radius: 45%;
+	border: 1px solid #CDCDCD;
+	box-shadow: 2px 2px 10px #C0C0C0;
+	-webkit-box-shadow: 2px 2px 10px #C0C0C0;
+	-moz-box-shadow: 2px 2px 10px #C0C0C0;
+}
+
+a:visited {
+  color: purple;
+}
+
+
 #div_grid_tmpl {
 	padding: 1% 1% 1% 1% ; 
 	max-width: 100%;
@@ -5,19 +147,11 @@
    display: block;
 }
 
-#gruds-grid {
-	table-layout: fixed; 
-   max-width: 96% ; 
-	border: 4px solid #F0F8FF ; 
-	border-radius: 9px;
-	background-color: #fff;
-	border-collapse:separate;
-}
-
 #grid {
    clear: both ; 
    max-width: 98% ; 
    padding-top: 30px;
+   overflow-y: visible;
 }
 th {
 	resize: both; 
@@ -111,67 +245,30 @@ th:focus {
 	border-width: 4px;
 }
 
-#pager{
-   padding-top: 12px;
-}
-
-#pager02 {
-  	z-index: 1;
-  	position: relative;
-  	clear: both;
-	left: 0%;
-}
-.cls_img_but {
-   padding: 6px;
-	background-color: transparent;
-   border-bottom-left-radius: 45%;
-   border-bottom-right-radius: 45%;
-	box-shadow: 0px 0px 5px 0px #C0C0C0;
-   border-color: white;
-   border-top: none;
-}
-.cls_img_but:hover, .cls_img_but:focus{
-   padding: 7px;
-   background-color: #D3D3D3;
-	border-radius: 0px 1px 0px 0px;
-	box-shadow: 0px 0px 5px 0px #C0C0C0;
-	-webkit-box-shadow: 0px 0px 5px 0px #C0C0C0;
-	-moz-box-shadow: 0px 0px 5px 0px #C0C0C0;
-   border-bottom-left-radius: 45%;
-   border-bottom-right-radius: 45%;
-   border-top: none;
-}
-#btnPlayPrev10 {
-   float:right;
-   position: relative ;
-   clear: none;
-}
-#btnPlayPrev {
-   float:right;
-   position: relative ;
-   clear: none;
-}
-#page_counter{
-   float:right;
-   position: relative ;
-   clear: none;
-   font-size: 80% ;
-   color: #a4a9c4 ;
-   margin-left: 1%;
-   margin-right: 1%;
-   margin-top:1%;
-}
-#btnPlayNext {
-   float:right;
-   position: relative ;
-   clear: none;
-}
-#btnPlayNext10 {
-   float:right;
-   margin-right: 30%;
-   position: relative ;
-   clear: none;
-}
 #but_srch {
    margin-left: 1%;
+}
+.pgr-btn, .pgr-button {
+    border: none;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    background-color: inherit;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+}
+.pgr-bar .pgr-button {
+    white-space: normal;
+}
+.pgr-bar .pgr-bar-item {
+   padding: 6px 10px;
+   float: left;
+   width: auto;
+   border: none;
+   display: inline;
+   outline: 0;
 }
